<resources>
    <string name="app_name">luanco</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="app_main_tittle">luanco</string>
    <string name="app_main_current_amount">Saldo actual</string>
    <string name="app_name_user1">Ramon</string>
    <string name="app_name_user2">Maria</string>
    <string name="app_name_user3">Luis</string>
    <string name="app_nav_header_subtitle">gestion de gastos</string>
    <string name="app_menu_gastos">Gastos</string>
    <string name="app_menu_ingresos">Ingresos</string>
    <string name="app_menu_graficos">Graficos</string>
    <string name="app_menu_informes">Informes</string>
    <string name="app_menu_ajustes">Ajustes</string>
    <string name="app_action_ajustes">Ajustes</string>
    <string name="app_menu_mail">Informe anual</string>
    <string name="title_activity_lu_tab">LuTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dlg_delete_title_ingresos">Borrar ingreso</string>
    <string name="dlg_delete_mensaje_ingresos">Estás seguro de que deseas borrar el ingreso seleccionado? Esta operación no se podrá deshacer.</string>
    <string name="dlg_delete_but_confirm">Confirmar</string>
    <string name="dlg_delete_but_cancel">Cancelar</string>
    <string name="dlg_delete_title_gastos">Borrar gasto</string>
    <string name="dlg_delete_mensaje_gastos">Estás seguro de que deseas borrar el gasto seleccionado? Esta operación no se podrá deshacer.</string>
    <string name="toast_no_gastos">Actualmente no hay ningún gasto. Pulsa el boton para crear el primero.</string>
    <string name="toast_no_ingresos">Actualmente no hay ningún ingreso. Pulsa el boton para crear el primero.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_new_gasto_descripcion">Descripcion</string>
    <string name="app_new_gasto_importe">Importe</string>
    <string name="app_new_gasto_fecha">Fecha</string>
    <string name="app_new_gasto_title">Datos del nuevo gasto</string>
    <string name="app_new_ingreso_title">Datos del nuevo ingreso</string>
    <string name="dlg_aldia_title">Poner al día</string>
    <string name="dlg_aldia_mensaje1">Se creará un ingreso para</string>
    <string name="dlg_aldia_mensaje2">de</string>
    <string name="app_new_aldia_ingreso_descripcion">Al dia</string>
    <string name="email">email</string>
    <string name="hint_password">password</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="btn_forgot_password">¿Olvidaste tu password?</string>
    <string name="btn_link_to_login">Ya estoy registrado</string>
    <string name="toast_enter_email">Debe introducir una dirección de correo válida</string>
    <string name="toast_enter_password">Debe introducir una password</string>
    <string name="toast_enter_len_password">La password debe ser de al menos 6 caracteres</string>
    <string name="toast_authentication_failed">¡¡El usuario o la password no son correctos!!</string>
    <string name="btn_login">Acceder</string>
    <string name="btn_link_to_register">Crear nueva cuenta</string>
    <string name="forgot_password_msg">Introduce la dirección de correo con la que te registraste y recibirás un mail con las instrucciones para el cambio de password</string>
    <string name="btn_reset_password">Reiniciar password</string>
    <string name="btn_back">Volver</string>
    <string name="toast_mail_reset_password">Introduce la dirección de correo con la que te registraste</string>
    <string name="toast_send_mail_reset_password">Te hemos enviado un mail con las instrucciones para resetear la password</string>
    <string name="toast_send_mail_reset_password_error">Error reseteando la password. Ponte en contacto con el Ramón. Igual se puede arreglar o igual no...</string>
    <string name="menu_separador_cuenta">Cuenta</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_separador_ayuda">Ayuda</string>
    <string name="menu_about">Acerca de</string>
    <string name="copyright_login">Luanco app de gastos. SuperG © 2018</string>
    <string name="toas_loading_main">Cargando datos...</string>
    <string name="gastos_mes_actual">Este mes:</string>
    <string name="gastos_media_mensual">Media:</string>
    <string name="gastos_ver_todos">Ver todos</string>
    <string name="gastos_ano_actual">Este año:</string>
    <string name="gastos_media_ano">Media:</string>
    <string name="ingresos_ver_todos">Ver todos</string>
    <string name="ingresos_mes_actual">Este mes:</string>
    <string name="ingresos_media_mensual">Media:</string>
    <string name="ingresos_ano_actual">Este año:</string>
    <string name="ingresos_media_ano">Media:</string>
    <string name="gastos_ano">Gastos este año</string>
    <string name="ingresos_ano">Ingresos este año</string>
    <string name="leyenda_grafico">Gastos cada mes</string>
    <string name="label_media_grafico">media</string>
    <string name="gastos_pie_select_fecha">Gastos de</string>
    <string name="gastos_pie_sin_gastos">No hay gastos ese mes. Prueba con otro</string>
    <string name="gastos_pie_sin_gastos_total">No hay gastos ese año. Prueba con otro</string>
    <string name="label_pie_luz">Luz</string>
    <string name="label_pie_agua">Agua</string>
    <string name="label_pie_banco">Banco</string>
    <string name="label_pie_impuestos">Impuestos</string>
    <string name="label_pie_comunidad">Comunidad</string>
    <string name="about_linea1">Aplicación para la gestión de gastos e ingresos de la casa de Luanco</string>
    <string name="about_copyright">SuperG © 2018</string>
    <string name="about_version">Version de aplicacion</string>
    <string name="connect_error">No hay acceso a los datos. Revisa tu conexión a internet.</string>
    <string name="connect_fire_error">Parece que hay algún problema accediendo a los datos. Intentalo en otro momento a ver si hay más suerte</string>
    <string name="luanco_version">3.1.0</string>
    <string name="ingreso_nuevo_todos">Ingreso externo para todos</string>
    <string name="app_new_gasto_categoria">Categoria</string>
    <string name="app_gastostab_spinercategories">Categorías:</string>
    <string name="app_view_gasto_tittle">Datos del Gasto</string>
    <string name="app_new_gasto_nota">Nota</string>
    <string name="tab_informes_fecha_inicio">Fecha inicio</string>
    <string name="tab_informes_fecha_fin">Fecha fin</string>
    <string name="tab_informes_spiner_categorias">Categoria</string>
    <string name="tab_informes_total">Total</string>
    <string name="tab_informes_encontrados">Gastos</string>
    <string name="tab_informes_desde_inicio">Desde inicio</string>
    <string name="new_gasto_imputable_switch">Imputable</string>
    <string name="view_gasto_no_imputable">No imputable</string>
</resources>
